# planning-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  DEPLOY.md  Dockerfile  GITHUB.md  MILESTONES.md  README.md  STATUS.md  VISION.md  fly.toml  issue-55-affected-tasks.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-23-reminder-count-logging.md  2026-05-23-reminder-restore-failures.md  2026-05-24-settings-screen.md  2026-05-24-sunday-review-polish.md
docs/superpowers/specs/: 2026-05-23-reminder-count-logging-design.md  2026-05-23-reminder-restore-failures-design.md  2026-05-24-settings-screen-design.md  2026-05-24-sunday-review-polish-design.md
project-plans/: agent-framework.md  build-plan.md  future-work.md  planning-agent-architecture.md  redesign-2026-05.md  redesign-m-r1.md  redesign-m-r2.md  redesign-m-r3.md  redesign-m-r4.md  system-prompt.md  todoist_mcp_findings.md
project-plans/archive/: architecture-sketch.md  getting-started.md
scripts/: migrate_memories_to_observations.py
src/planning_agent/: agent.py  auth.py  config.py  context.py  extraction.py  horizons.py  main_cli.py  main_nightly.py  main_web.py  replan_today.py  settings_api.py  sunday_review.py  version.py  visibility.py
src/planning_agent/static/: index.html  login.html  settings.html  today.html
src/planning_context/: __main__.py  conversations.py  deferrals.py  fuzzy_recurring.py  memories.py  observations.py  rules.py  server.py  storage.py  values.py
src/todoist_mcp/: server.py  tools.py
src/todoist_scheduler/: cli.py  main.py  overdue.py  reminders.py  reschedule.py  scheduler.py
tests/: conftest.py  test_basic.py  test_cli.py  test_conversations.py  test_deferrals.py  test_extraction.py  test_fuzzy_recurring.py  test_horizons.py  test_memories.py  test_nightly.py  test_observations.py  test_planning_agent.py  test_planning_context_server.py  test_prompt_coverage.py  test_reminders.py  test_replan_today.py  test_reschedule.py  test_reschedule_tasks.py  test_reschedule_tasks_regression.py  test_rules.py  test_server.py  test_settings_api.py  test_storage.py  test_sunday_review.py  test_values.py  test_visibility.py  test_web.py
